--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4034,12 +4034,6 @@ details.collapse summary::-webkit-details-marker {
   background-color: var(--fallback-s,oklch(var(--s)/var(--tw-bg-opacity)));
 }
 
-.divider-success:before,
-  .divider-success:after {
-  --tw-bg-opacity: 1;
-  background-color: var(--fallback-su,oklch(var(--su)/var(--tw-bg-opacity)));
-}
-
 .drawer-toggle:checked ~ .drawer-side > .drawer-overlay {
   background-color: #0006;
 }
@@ -8466,6 +8460,14 @@ html:has(.drawer-open.drawer-open) {
   display: none;
 }
 
+.h-6 {
+  height: 1.5rem;
+}
+
+.w-1\/3 {
+  width: 33.333333%;
+}
+
 .w-\[this-is\\\\\] {
   width: this-is\\;
 }
@@ -8482,8 +8484,8 @@ html:has(.drawer-open.drawer-open) {
   width: 100%;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+.w-6 {
+  width: 1.5rem;
 }
 
 .flex-shrink {
@@ -8492,6 +8494,10 @@ html:has(.drawer-open.drawer-open) {
 
 .shrink {
   flex-shrink: 1;
+}
+
+.shrink-0 {
+  flex-shrink: 0;
 }
 
 .flex-grow {
@@ -9012,16 +9018,16 @@ html:has(.drawer-open.drawer-open) {
   justify-items: stretch;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .gap-2 {
   gap: 0.5rem;
 }
 
 .gap-3 {
   gap: 0.75rem;
+}
+
+.gap-4 {
+  gap: 1rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -9475,16 +9481,6 @@ html:has(.drawer-open.drawer-open) {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-green-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .decoration-slice {
   -webkit-box-decoration-break: slice;
           box-decoration-break: slice;
@@ -9570,6 +9566,10 @@ html:has(.drawer-open.drawer-open) {
   background-origin: content-box;
 }
 
+.stroke-current {
+  stroke: currentColor;
+}
+
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -9593,10 +9593,6 @@ html:has(.drawer-open.drawer-open) {
 .object-scale-down {
   -o-object-fit: scale-down;
      object-fit: scale-down;
-}
-
-.p-4 {
-  padding: 1rem;
 }
 
 .px-1 {
@@ -10313,10 +10309,6 @@ html:has(.drawer-open.drawer-open) {
     width: 100%;
   }
 
-  .sm\:w-1 {
-    width: 0.25rem;
-  }
-
   .sm\:underline {
     text-decoration-line: underline;
   }
@@ -10327,16 +10319,8 @@ html:has(.drawer-open.drawer-open) {
     width: 50%;
   }
 
-  .md\:w-full {
-    width: 100%;
-  }
-
   .md\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-1 {
-    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .md\:flex-row {
